--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div>%sveltekit.body%</div>
-	<script type="text/javascript" src="/src/routes/_components/game.js"></script>
+	<script type="text/javascript" src="/src/components/game.js"></script>
 </body>
 
 </html>
